Fixed arrow on mobile

--- a/style.css
+++ b/style.css
@@ -317,7 +317,7 @@ button.btn {
     }
 
     a.btn::after {
-        height: 32px; 
+        height: 41px; 
     }
 }
 
